Cleaned up the code and added a footer.

--- a/SearchJournal/wwwroot/index.html
+++ b/SearchJournal/wwwroot/index.html
@@ -18,6 +18,17 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <footer class="footer" style="color: silver;">
+        <div class="container text-center">
+            <small>
+                Copyright © 2020 by Dino Bansigan
+                <br />
+                This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International License</a>.
+                <br />
+                This site on <a href="https://github.com/DinoBansigan/SearchJournal">Github</a> | Hosted for free on <a href="https://www.netlify.com/">Netlify</a>
+            </small>
+        </div>
+    </footer>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
