Minor aesthetic changes. Added the Faso Blazor spinkit for the search results page. And added dynamic search results headers.

--- a/SearchJournal/wwwroot/index.html
+++ b/SearchJournal/wwwroot/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <app><div class="spinner"></div></app>
+    <app>Loading Blazor app...</app>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
@@ -21,7 +21,7 @@
     <footer class="footer" style="color: silver;">
         <div class="container text-center">
             <small>
-                Copyright © 2020 by Dino Bansigan
+                Copyright © 2020 by <a href="https://dinobansigan.com/" target="_blank">Dino Bansigan</a>
                 <br />
                 This work is licensed under a <a href="http://creativecommons.org/licenses/by/4.0/" rel="license">Creative Commons Attribution 4.0 International License</a>.
                 <br />
